Created the template for each project

--- a/css/work.css
+++ b/css/work.css
@@ -1,6 +1,6 @@
 .work {
 
-    width: 100%;
+    width: calc(100% - 40px);
     height: fit-content;
     padding: 0px 20px;
     margin-bottom: 250px;
