--- a/css/projects.css
+++ b/css/projects.css
@@ -1,8 +1,73 @@
 .projects {
 
-    width: 100%;
+    width: calc(100% - 40px);
     height: 500px;
     padding: 0px 20px;
     margin-bottom: 250px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    .project {
+
+        width: 100%;
+        height: fit-content;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+
+        .image {
+
+            width: 100%;
+            height: 300px;
+            background-color: red;
+
+        }
+
+        .description {
+
+            width: calc(100% - 20px);
+            height: fit-content;
+            padding: 10px;
+
+        }
+
+        .info {
+
+            width: calc(100% - 20px);
+            height: 50px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0px 10px;
+
+            .stack, .links {
+
+                width: fit-content;
+                height: fit-content;
+                display: flex;
+                gap: 10px;
+
+            }
+
+        }
+
+    }
+
+}
+
+.language {
+
+    width: 30px;
+    height: 30px;
+    background-color: red;
+
+}
+
+.link {
+
+    width: 30px;
+    height: 30px;
+    background-color: red;
 
 }
