--- a/css/projects.css
+++ b/css/projects.css
@@ -3,7 +3,7 @@
     width: calc(100% - 40px);
     height: 500px;
     padding: 0px 20px;
-    margin-bottom: 250px;
+    margin-bottom: 100px;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -20,7 +20,16 @@
 
             width: 100%;
             height: 300px;
-            background-color: red;
+            object-fit: cover;
+
+        }
+
+        .name {
+
+            width: calc(100% - 20px);
+            height: fit-content;
+            padding: 10px;
+            padding-bottom: 0px;
 
         }
 
