--- a/css/general.css
+++ b/css/general.css
@@ -9,76 +9,64 @@ body {
 
     background-color: #000000;
     margin: 0px;
-    font-family: Inter;
+    padding: 0px;
     user-select: none;
+    overflow: hidden;
 
 }
 
-.content_wrapper {
+.navbar {
 
-    width: calc(100vw - 20px);
-    max-width: 800px;
-    height: 2000px;
-    margin: 0px auto;
-
-}
-
-@media only screen and (max-width: 740px) {
-    
-    p { font-size: 5vw; }
-    p1 { font-size: 7vw; }
-    p2 { font-size: 6vw; }
-
-}
-
-@media only screen and (min-width: 741px) {
-    
-    p { font-size: 28px; }
-    p1 { font-size: 60px; }
-    p2 { font-size: 36px; }
-
-}
-
-p {
-
-    margin: 0px;
-    color: #ffffff;
-
-}
-
-p1 {
-
-    font-weight: 1000;
-    background: rgb(255,93,1);
-    background: linear-gradient(90deg, rgba(255,93,1,1) 0%, rgba(255,170,122,1) 100%);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-
-}
-
-p2 {
-    font-weight: 1000;
-    background: rgb(121,15,255);
-    background: linear-gradient(90deg, rgba(121,15,255,1) 0%, rgba(180,120,255,1) 100%);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-.btn {
-
-    width: fit-content;
-    height: 50px;
-    padding: 0px 20px;
-    border-radius: 15px;
+    width: 100%;
+    height: 75px;
     box-sizing: border-box;
-    border: 3px solid rgb(121,15,255);
-    background-color: transparent;
-    color: #ffffff;
-    font-size: 16px;
-    cursor: pointer;
+    border-bottom: 5px solid #222222;
+    padding: 0px 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+    gap: 20px;
+    position: relative;
+
+    .icon_wrapper {
+
+        width: 50px;
+        height: 50px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+
+        i {
+
+            font-size: 34px;
+            color: #222222;
+
+        }
+
+    }
+    .icon_wrapper:hover {
+
+        cursor: pointer;
+        i { color: #454545 }
+
+    }
+    .icon_wrapper:last-of-type { margin-left: auto; }
+
+    .light {
+
+        width: 80px;
+        height: 5px;
+        background-color: #FF5D01;
+        background: linear-gradient(90deg, rgba(255,93,1,0) 0%,
+        rgba(255,93,1,1) 50%,
+        rgba(255,93,1,0) 100%);
+        position: absolute;
+        bottom: -5px;
+        left: 5px;
+        transition: 0.1s left;
+
+    }
 
 }
-
-.btn:hover { border: 3px solid rgba(180,120,255,1); }
