Added first section, "About Me"

--- a/view/about_me.html
+++ b/view/about_me.html
@@ -1,3 +1,32 @@
-<div>
-    
+<div class="about_me_wrapper">
+    <div class="about_me">
+        <div class="description">
+            <div class="presentation">
+                <p>Hi! I'm</p>
+                <h1>Iker Muñoz Molero</h1>
+                <p>a versatile full-stack web developer with exceptional adaptability and an insatiable passion for learning and mastering new technologies.</p>
+            </div>
+            <div class="experience">
+                <div class="experience_wrapper">
+                    <h1>1+</h1>
+                    <p>Years of experience</p>
+                </div>
+                <div class="experience_wrapper">
+                    <h1>4</h1>
+                    <p>Commercial projects developed</p>
+                </div>
+            </div>
+            <div class="extras">
+                <p>Others ways to find me:</p>
+                <div class="extras_wrapper">
+                    <button>
+                        <i class="fa-brands fa-github"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="icon">
+            <p>&lt;/&gt;</p>
+        </div>
+    </div>
 </div>
