--- a/css/general.css
+++ b/css/general.css
@@ -12,6 +12,7 @@ body {
     padding: 0px;
     user-select: none;
     overflow: hidden;
+    font-family: Inter;
 
 }
 
@@ -52,21 +53,37 @@ body {
         i { color: #454545 }
 
     }
-    .icon_wrapper:last-of-type { margin-left: auto; }
 
     .light {
 
         width: 80px;
         height: 5px;
-        background-color: #FF5D01;
-        background: linear-gradient(90deg, rgba(255,93,1,0) 0%,
-        rgba(255,93,1,1) 50%,
-        rgba(255,93,1,0) 100%);
+        background-color: #e3c37f;
+        background: linear-gradient(90deg, rgba(227,195,127,0) 0%,
+        rgba(227,195,127,1) 50%,
+        rgba(227,195,127,0) 100%);
         position: absolute;
         bottom: -5px;
         left: 5px;
         transition: 0.1s left;
 
     }
+
+}
+
+p {
+
+    font-size: 24px;
+    color: #ffffff;
+    margin: 0px;
+
+}
+
+h1 {
+
+    font-size: 36px;
+    font-weight: 700;
+    color: #e3c37f;
+    margin: 0px;
 
 }
