--- a/view/projects.html
+++ b/view/projects.html
@@ -1,3 +1,53 @@
-<div>
-    
+<div class="projects_wrapper">
+    <div class="projects">
+        <div class="stack">
+            <h1>Stack</h1>
+            <p>Front-end</p>
+            <div class="stack_section">
+                <div class="stack_icon html">
+                    <img src="../icons/html.svg">
+                </div>
+                <div class="stack_icon css">
+                    <img src="../icons/css.svg">
+                </div>
+                <div class="stack_icon js">
+                    <img src="../icons/javascript.svg">
+                </div>
+                <div class="stack_icon angular">
+                    <img src="../icons/angularjs.svg">
+                </div>
+            </div>
+            <p>Back-end</p>
+            <div class="stack_section">
+                <div class="stack_icon nodejs">
+                    <img src="../icons/nodejs.svg">
+                </div>
+                <div class="stack_icon python">
+                    <img src="../icons/python.svg">
+                </div>
+            </div>
+            <p>Databases</p>
+            <div class="stack_section">
+                <div class="stack_icon sqlite">
+                    <img src="../icons/sqlite.svg">
+                </div>
+            </div>
+            <p>Tools</p>
+            <div class="stack_section">
+                <div class="stack_icon vscode">
+                    <img src="../icons/vscode.svg">
+                </div>
+                <div class="stack_icon neovim">
+                    <img src="../icons/neovim.svg">
+                </div>
+                <div class="stack_icon npm">
+                    <img src="../icons/npm.svg">
+                </div>
+                <div class="stack_icon git">
+                    <img src="../icons/git.svg">
+                </div>
+            </div>
+        </div>
+        <div class="list"></div>
+    </div>
 </div>
