--- a/css/projects.css
+++ b/css/projects.css
@@ -1,17 +1,20 @@
 .projects_wrapper {
 
-    width: 100vw;
+    width: calc(100vw - 40px);
     height: calc(100vh - 75px);
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0px 20px;
 
     .projects {
 
         width: 1200px;
         height: calc(100vh - 100px);
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
+        gap: 50px;
 
         .stack {
 
@@ -28,7 +31,18 @@
 
         .list {
 
+            width: fit-content;
+            height: fit-content;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
 
+            h1 {
+
+                width: 100%;
+                text-align: right;
+
+            }
 
         }
 
@@ -59,5 +73,12 @@
         }
 
     }
+
+}
+
+@media screen and (max-width: 1300px) {
+    
+    .stack { display: none !important; }
+    .list { width: 100% !important; }
 
 }
