--- a/js/directives/job_card/job_card.css
+++ b/js/directives/job_card/job_card.css
@@ -1,6 +1,6 @@
-project-card {
+job-card {
 
-    width: 820px;
+    width: 100%;
     height: fit-content;
     border-radius: 25px;
     background-size: cover;
@@ -13,7 +13,7 @@ project-card {
     gap: 10px;
     padding: 20px;
 
-    .title_wrapper {
+    .title_wrapper, .duration_wrapper {
 
         width: 100%;
         height: 30px;
@@ -41,6 +41,8 @@ project-card {
 
     };
 
+    .duration_wrapper { justify-content: end; }
+
     .description_wrapper {
 
         flex-grow: 1;
@@ -50,27 +52,9 @@ project-card {
 
             font-size: 20px;
             display: -webkit-box;
-            -webkit-line-clamp: 3;
+            -webkit-line-clamp: 4;
             -webkit-box-orient: vertical;
             overflow: hidden;
-
-        }
-
-    };
-
-    .stack_wrapper {
-
-        width: 100%;
-        height: 30px;
-        display: flex;
-        gap: 10px;
-        justify-content: end;
-
-        div {
-
-            width: 30px;
-            height: 30px;
-            background: none;
 
         }
 
