--- a/css/projects.css
+++ b/css/projects.css
@@ -4,16 +4,16 @@
     height: calc(100vh - 75px);
     display: flex;
     justify-content: center;
-    align-items: center;
-    padding: 0px 20px;
+    padding: 20px;
 
     .projects {
 
         width: 1200px;
-        height: calc(100vh - 100px);
+        height: fit-content;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        margin: auto;
         gap: 50px;
 
         .stack {
@@ -36,6 +36,7 @@
             display: flex;
             flex-direction: column;
             gap: 10px;
+            margin-bottom: 50px;
 
             h1 {
 
@@ -79,6 +80,11 @@
 @media screen and (max-width: 1300px) {
     
     .stack { display: none !important; }
-    .list { width: 100% !important; }
+    .list {
+
+        width: 100% !important;
+        h1 { text-align: left !important; }
+
+    }
 
 }
