--- a/view/career.html
+++ b/view/career.html
@@ -1,3 +1,8 @@
-<div>
-    
+<div class="career_wrapper">
+    <div class="career">
+        <div class="list">
+            <h1>Career</h1>
+            <job-card ng-repeat="job in jobs" job="job"></job-card>
+        </div>
+    </div>
 </div>
