--- a/view/projects.html
+++ b/view/projects.html
@@ -5,46 +5,46 @@
             <p>Front-end</p>
             <div class="stack_section">
                 <div class="stack_icon html">
-                    <img src="icons/html.svg">
+                    <img src="/icons/html.svg">
                 </div>
                 <div class="stack_icon css">
-                    <img src="icons/css.svg">
+                    <img src="/icons/css.svg">
                 </div>
                 <div class="stack_icon js">
-                    <img src="icons/js.svg">
+                    <img src="/icons/js.svg">
                 </div>
                 <div class="stack_icon angularjs">
-                    <img src="icons/angularjs.svg">
+                    <img src="/icons/angularjs.svg">
                 </div>
             </div>
             <p>Back-end</p>
             <div class="stack_section">
                 <div class="stack_icon nodejs">
-                    <img src="icons/nodejs.svg">
+                    <img src="/icons/nodejs.svg">
                 </div>
                 <div class="stack_icon python">
-                    <img src="icons/python.svg">
+                    <img src="/icons/python.svg">
                 </div>
             </div>
             <p>Databases</p>
             <div class="stack_section">
                 <div class="stack_icon sqlite">
-                    <img src="icons/sqlite.svg">
+                    <img src="/icons/sqlite.svg">
                 </div>
             </div>
             <p>Tools</p>
             <div class="stack_section">
                 <div class="stack_icon vscode">
-                    <img src="icons/vscode.svg">
+                    <img src="/icons/vscode.svg">
                 </div>
                 <div class="stack_icon neovim">
-                    <img src="icons/neovim.svg">
+                    <img src="/icons/neovim.svg">
                 </div>
                 <div class="stack_icon npm">
-                    <img src="icons/npm.svg">
+                    <img src="/icons/npm.svg">
                 </div>
                 <div class="stack_icon git">
-                    <img src="icons/git.svg">
+                    <img src="/icons/git.svg">
                 </div>
             </div>
         </div>
